[package]
name = "schedules"
version = "0.1.0"
edition = "2024"
description = "A lightweight Rust library for managing operations across multiple time scales"
license = "MIT"
authors = ["PSU3D0"]
repository = "https://github.com/PSU3D0/scheduler.rs"
readme = "README.md"
keywords = ["scheduler", "cron", "timing", "async"]
categories = ["concurrency", "date-and-time"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = { version = "^1.0", features = ["v4"] }
futures = "0.3"
tokio = { version = "^1.0", features = ["rt", "rt-multi-thread", "time", "macros", "signal"], optional = true }
threadpool = "1.8"
num_cpus = "1.16"
rand = "0.8"
rand_chacha = "0.3"

[features]
default = []
async = ["tokio"]
