[package]
name = "schedules"
version = "0.4.0"
edition = "2024"
description = "A lightweight Rust library for managing operations across multiple time scales"
license = "MIT"
authors = ["PSU3D0"]
repository = "https://github.com/PSU3D0/scheduler.rs"
readme = "README.md"
keywords = ["scheduler", "cron", "timing", "async"]
categories = ["concurrency", "date-and-time"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = { version = "^1.16", features = ["v4"] }
tokio = { version = "^1.44", features = ["rt", "rt-multi-thread", "time", "macros", "signal"], optional = true }
threadpool = "^1.8"
num_cpus = "^1.16"
rand = "0.8"
rand_chacha = { version = "0.3", optional = true }
arc-swap = "^1.7.1"

[features]
default = []
async = ["tokio"]
crypto_rand = ["rand_chacha"]
